# linepyline

./: .gitignore  README.md  pyproject.toml
examples/: US-standard-atmosphere-example.ipynb  afgl_1986-us_standard.nc
linepyline/: __init__.py  hapi.py  heavy_lifting.py  heavy_lifting_numba.py  linepyline.py  phys.py
linepyline/HITRAN/HAPI/: download_HITRAN_to_netcdf.py  hapi.py
linepyline/HITRAN/HITRAN2024/netcdf/: O2_hitran_line_data.nc
linepyline/MT_CKD/MT_CKD_H2O-4.3/src/: mt_ckd_h2o_module.f90
