[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["linepyline"]

[project]
name = "linepyline"
version = "0.1.0"
description = "A fast pure-python package for line-by-line radiative transfer calculations"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Rodrigo Caballero", email = "rodrigo.caballero@misu.su.se"}]
keywords = ["HITRAN", "MT_CKD", "line-by-line", "radiative transfer"]
classifiers = ["Programming Language :: Python :: 3"]

#dependencies = [
#    "numpy>=2.2",
#    "xarray>=2025.4",
#    "scipy>=1.15",
#    "numba>=0.63",
#    "numba-stats>=1.11",
#]

[project.urls]
Homepage = "https://github.com/yourusername/my-package"
#Documentation = "https://my-package.readthedocs.io"